samples/_failures_safe/1761342367_359de2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_770afa2f.c: In function ‘evaluate_expression’:
./samples/SAFE/__tmp_770afa2f.c:176:5: error: expected expression at end of input
  176 |     if (input == NULL)
      |     ^~
./samples/SAFE/__tmp_770afa2f.c:176:5: error: expected declaration or statement at end of input
